# funserver

./: README.md  pyproject.toml  pyproject2.toml
src/funserver/servers/: onehub.py
src/funserver/servers/base/: base.py  install.py  start.py
