[project]
name = "funserver"
version = "1.0.47"
description = "funserver"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [ "click>=8.1.8", "funbuild>=1.5.11", "funutil>=1.0.50", "psutil>=7.0.0", "typer>=0.15.3",]
[[project.authors]]
name = "牛哥"
email = "niuliangtao@qq.com"

[[project.authors]]
name = "farfarfun"
email = "farfarfun@qq.com"

[[project.maintainers]]
name = "牛哥"
email = "niuliangtao@qq.com"

[[project.maintainers]]
name = "farfarfun"
email = "farfarfun@qq.com"

[project.scripts]
funserver = "funserver.base:funserver"
funonehub = "funserver.servers.onehub:funonehub"

[project.urls]
Organization = "https://github.com/farfarfun"
Repository = "https://github.com/farfarfun/funserver"
Releases = "https://github.com/farfarfun/funserver/releases"

[tool.setuptools]
license-files = []
