[project]
name = "funserver"
version = "1.0.55"
description = "funserver"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [ "click>=8.1.8", "funbuild>=1.5.11", "funlog-tau>=1.0.1", "psutil>=7.0.0", "typer>=0.15.3",]
[[project.authors]]
name = "niuliangtao"
email = "farfarfun@qq.com"

[[project.maintainers]]
name = "牛哥"
email = "niuliangtao@qq.com"

[[project.maintainers]]
name = "farfarfun"
email = "farfarfun@qq.com"

[project.scripts]
funserver = "funserver.base:funserver"
funonehub = "funserver.servers.onehub:funonehub"

[project.urls]
Organization = "https://github.com/farfarfun"
Repository = "https://github.com/farfarfun/funserver"
Releases = "https://github.com/farfarfun/funserver/releases"

[tool.setuptools]
license-files = []
